--- a/titanic.ipynb
+++ b/titanic.ipynb
@@ -6,18 +6,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# data analysis and wrangling\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import random as rnd\n",
     "from sklearn import tree, model_selection\n",
     "\n",
-    "# visualization\n",
-    "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt\n",
-    "%matplotlib inline\n",
     "\n",
-    "# machine learning\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.svm import SVC, LinearSVC\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
@@ -29,6 +23,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Assigning data to variables"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -37,6 +38,13 @@
     "train_df = pd.read_csv('train.csv')\n",
     "test_df = pd.read_csv('test.csv')\n",
     "combine = [train_df, test_df]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Simple data outputs displaying content of files"
    ]
   },
   {
@@ -215,6 +223,13 @@
     "# preview the data\n",
     "print(train_df.info())\n",
     "train_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The next cell contains edits to the data. Starting with excluding data that will most likely not be relevant. "
    ]
   },
   {
@@ -405,6 +420,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The next two cells alter the data from string to integers so that the decision tree can more easily compare the data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -591,98 +613,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 418 entries, 0 to 417\n",
-      "Data columns (total 8 columns):\n",
-      "PassengerId    418 non-null int64\n",
-      "Pclass         418 non-null int64\n",
-      "Sex            418 non-null int64\n",
-      "Age            418 non-null float64\n",
-      "SibSp          418 non-null int64\n",
-      "Parch          418 non-null int64\n",
-      "Fare           418 non-null float64\n",
-      "Embarked       418 non-null int64\n",
-      "dtypes: float64(2), int64(6)\n",
-      "memory usage: 26.2 KB\n",
-      "None\n",
-      "     PassengerId  Pclass  Sex   Age  SibSp  Parch      Fare  Embarked\n",
-      "0            892       3    0  34.5      0      0    7.8292         0\n",
-      "1            893       3    1  47.0      1      0    7.0000         1\n",
-      "2            894       2    0  62.0      0      0    9.6875         0\n",
-      "3            895       3    0  27.0      0      0    8.6625         0\n",
-      "4            896       3    1  22.0      1      1   12.2875         0\n",
-      "5            897       3    0  14.0      0      0    9.2250         2\n",
-      "6            898       3    1  30.0      0      0    7.6292         0\n",
-      "7            899       2    0  26.0      1      1   29.0000         0\n",
-      "8            900       3    1  18.0      0      0    7.2292         0\n",
-      "9            901       3    0  21.0      2      0   24.1500         1\n",
-      "10           902       3    0  27.0      0      0    7.8958         0\n",
-      "11           903       1    0  46.0      0      0   26.0000         0\n",
-      "12           904       1    1  23.0      1      0   82.2667         0\n",
-      "13           905       2    0  63.0      1      0   26.0000         0\n",
-      "14           906       1    1  47.0      1      0   61.1750         0\n",
-      "15           907       2    1  24.0      1      0   27.7208         0\n",
-      "16           908       2    0  35.0      0      0   12.3500         2\n",
-      "17           909       3    0  21.0      0      0    7.2250         0\n",
-      "18           910       3    1  27.0      1      0    7.9250         0\n",
-      "19           911       3    1  45.0      0      0    7.2250         1\n",
-      "20           912       1    0  55.0      1      0   59.4000         0\n",
-      "21           913       3    0   9.0      0      1    3.1708         0\n",
-      "22           914       1    1  27.0      0      0   31.6833         2\n",
-      "23           915       1    0  21.0      0      1   61.3792         0\n",
-      "24           916       1    1  48.0      1      3  262.3750         0\n",
-      "25           917       3    0  50.0      1      0   14.5000         0\n",
-      "26           918       1    1  22.0      0      1   61.9792         1\n",
-      "27           919       3    0  22.5      0      0    7.2250         0\n",
-      "28           920       1    0  41.0      0      0   30.5000         2\n",
-      "29           921       3    0  27.0      2      0   21.6792         0\n",
-      "..           ...     ...  ...   ...    ...    ...       ...       ...\n",
-      "388         1280       3    0  21.0      0      0    7.7500         2\n",
-      "389         1281       3    0   6.0      3      1   21.0750         1\n",
-      "390         1282       1    0  23.0      0      0   93.5000         0\n",
-      "391         1283       1    1  51.0      0      1   39.4000         0\n",
-      "392         1284       3    0  13.0      0      2   20.2500         0\n",
-      "393         1285       2    0  47.0      0      0   10.5000         1\n",
-      "394         1286       3    0  29.0      3      1   22.0250         0\n",
-      "395         1287       1    1  18.0      1      0   60.0000         0\n",
-      "396         1288       3    0  24.0      0      0    7.2500         0\n",
-      "397         1289       1    1  48.0      1      1   79.2000         0\n",
-      "398         1290       3    0  22.0      0      0    7.7750         0\n",
-      "399         1291       3    0  31.0      0      0    7.7333         0\n",
-      "400         1292       1    1  30.0      0      0  164.8667         0\n",
-      "401         1293       2    0  38.0      1      0   21.0000         0\n",
-      "402         1294       1    1  22.0      0      1   59.4000         0\n",
-      "403         1295       1    0  17.0      0      0   47.1000         0\n",
-      "404         1296       1    0  43.0      1      0   27.7208         0\n",
-      "405         1297       2    0  20.0      0      0   13.8625         0\n",
-      "406         1298       2    0  23.0      1      0   10.5000         0\n",
-      "407         1299       1    0  50.0      1      1  211.5000         0\n",
-      "408         1300       3    1  27.0      0      0    7.7208         0\n",
-      "409         1301       3    1   3.0      1      1   13.7750         0\n",
-      "410         1302       3    1  27.0      0      0    7.7500         0\n",
-      "411         1303       1    1  37.0      1      0   90.0000         2\n",
-      "412         1304       3    1  28.0      0      0    7.7750         2\n",
-      "413         1305       3    0  27.0      0      0    8.0500         0\n",
-      "414         1306       1    1  39.0      0      0  108.9000         0\n",
-      "415         1307       3    0  38.5      0      0    7.2500         0\n",
-      "416         1308       3    0  27.0      0      0    8.0500         0\n",
-      "417         1309       3    0  27.0      1      1   22.3583         0\n",
-      "\n",
-      "[418 rows x 8 columns]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(test_df.info())\n",
-    "print(test_df)\n"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
